Upgrade to Swift 5, fix sizing bug, small refactoring, add `DownOptions` parameter

--- a/Source/Web/css/clearness.css
+++ b/Source/Web/css/clearness.css
@@ -10,7 +10,8 @@ blockquote {
     padding: 0;
 }
 body {
-    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+/*    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;*/
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
     font-size: 13px;
     color: black;
     margin: 10px 13px 10px 13px;
